--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mysten/dapp-kit": "^0.19.6",
     "@mysten/sui": "^1.43.1",
+    "@supabase/supabase-js": "^2.76.1",
     "buffer": "^6.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
